# FeedForge

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  psarc2feedpak.spec  pyproject.toml  vite.config.js
.github/: FUNDING.yml
.github/workflows/: build.yml
electron/: main.cjs  platform.cjs  preload.cjs
src/feedback_converter/: __init__.py  batch.py  cli.py  converter.py  demucs_server.py  feedpak.py  feedpak_validator.py  inspector.py  rig_builder_seed.py
src/feedback_converter/data/: equipment.json  feedback_equipment.json
src/feedback_converter/data/feedpak_schemas/: UPSTREAM.md  manifest.schema.json
src/feedback_converter/psarc_format/: __init__.py  crypto.py  psarc.py
tests/: test_converter.py  test_demucs_server.py  test_feedpak.py
tools/: backfill_feedpak_authors.py  build-linux-tools.sh  reconvert_dlc_parallel.py  start-demucs-server.ps1  start-demucs-server.sh
ui/src/: main.jsx  styles.css
