[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feedforge"
version = "0.1.1"
description = "Convert PSARC CDLC packages to FeedPak packages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "construct>=2.10,<3",
    "cryptography>=42",
    "PyYAML>=6",
]

[project.optional-dependencies]
dev = [
    "jsonschema>=4",
    "pytest>=8",
    "pyinstaller>=6",
]

[project.scripts]
psarc2feedpak = "feedback_converter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
feedback_converter = ["tools/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
